# job-scheduler

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.reaper  Dockerfile.worker  Makefile  README.md  create-demo-jobs.sh  deploy-local-k8s.sh  docker-compose.yml  k8s-load-test.sh  prometheus.yml  pyproject.toml  run.sh  run_tests.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py
dashboard/: Dockerfile  next.config.js  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
k8s/: README.md  api.yaml  configmap.yaml  dashboard.yaml  ingress.yaml  jaeger.yaml  kustomization.yaml  load-test-job.yaml  migration-job.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  postgres.yaml  reaper.yaml  secret.yaml  servicemonitor.yaml  worker.yaml
scripts/: README.md  check-traces.sh  deploy-local-k8s.sh  run-locust-test.sh  run.sh  test-rate-limit.sh  trace-request.sh
src/: __init__.py  config.py  constants.py
src/api/: __init__.py  auth.py  main.py  rate_limit.py  websocket.py
src/api/routes/: __init__.py  auth.py  health.py  jobs.py
src/db/: __init__.py  connection.py  models.py  repository.py
src/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/reaper/: __init__.py  main.py
src/types/: __init__.py  api.py  events.py  job.py
src/worker/: __init__.py  handlers.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_worker.py
tests/load/: __init__.py  locustfile.py
tests/unit/: __init__.py  test_auth.py  test_handlers.py  test_rate_limit.py  test_repository.py
